Update to SwaggerUI 2.27.1

--- a/dev/com.ibm.ws.openapi.ui/swagger-ui/src/original/style/_table.scss
+++ b/dev/com.ibm.ws.openapi.ui/swagger-ui/src/original/style/_table.scss
@@ -90,9 +90,9 @@ table {
     border-width: 1px;
   }
 
-  .markdown,
-  .renderedMarkdown {
-    p {
+  .markdown:first-child,
+  .renderedMarkdown:first-child {
+    p:first-child {
       margin: 0;
     }
   }
@@ -170,8 +170,11 @@ table {
 
   .markdown,
   .renderedMarkdown {
-    p {
+    p:first-child {
       margin: 0;
+    }
+    p:last-child {
+      margin-bottom: 0;
     }
   }
 }
